# xtools

./: .gitignore  AGENTS.md  CLAUDE.md  技术栈.md
backend/: README.md  pyproject.toml  start_simple.py
backend/app/: __init__.py  database.py  enumeration_service.py  http_enumerator.py  logging_config.py  main.py  maintenance.py  models.py  run_progress.py  runner.py  schemas.py
backend/data/: resolvers.txt  xtools.db-shm  xtools.db-wal
backend/tests/: test_api.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/proxies/: page.tsx
frontend/app/request-tester/: page.tsx
frontend/app/wordlists/: page.tsx
frontend/components/: dashboard-shell.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  file-upload.tsx  input.tsx  modal.tsx  results.tsx  select.tsx  table.tsx
frontend/components/workspace/: home-panel.tsx  proxies-panel.tsx  request-tester-panel.tsx  subdomain-panel.tsx  tab-bar.tsx  wordlists-panel.tsx  workspace.tsx
openspec/: project.md
openspec/changes/add-proxy-management/: proposal.md  tasks.md
openspec/changes/add-proxy-management/specs/proxy/: spec.md
openspec/changes/add-request-tester/: proposal.md  tasks.md
openspec/changes/add-request-tester/specs/request-tester/: spec.md
openspec/changes/add-subdomain-enumeration/: design.md  proposal.md  tasks.md
openspec/changes/add-tabbed-workspace/: proposal.md  tasks.md
openspec/changes/migrate-frontend-nextjs/: design.md  proposal.md  tasks.md
(+3 files in other folders)
