[project]
name = "xtools-backend"
version = "0.1.0"
description = "XTools backend for subdomain enumeration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.20",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "pyproject.toml", "README.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
